--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.anull.dev.leo.battleships"
         minSdkVersion 15
@@ -24,9 +24,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0+'
+    compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.android.support:design:26.0+'
+    compile 'com.android.support:design:26.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'org.xdty.preference:color-picker:0.0.5'
     testCompile 'junit:junit:4.12'
 }
